Started working on the site

--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
-Hello world
+<!DOCTYPE html>
+
+<html>
+
+<head>
+<title>CryoTracker</title>
+<link type="text/css" rel="stylesheet" href="style.css"/>
+<link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
+</head>
+
+<body class="backcolor">
+
+	<div id="content">
+		
+		<div class="container">
+		
+			<a class="main_nav" href="index.html">CryoTracker</a>
+			<a class="main_nav" href="contact.html">Contact</a>
+			<a class="main_nav" href="install.html">Install</a>
+
+		</div>
+	
+		<h1>CryoTracker is a cryo/freezer box contents tracker for Windows Desktop</h1>
+		
+		<hr width="100px">
+
+		<p>CryoTracker is a simple program that allows you to keep track of all your materials
+		</p>
+		
+		<p>Below are some of the features available in CryoTracker
+		</p>
+
+		<ul>
+			<li>Create boxes that are organized by rack and location
+			</li>
+			<li>Choose between 10 box divisions, from an empty box to a 10x10 configuration
+			</li>
+			<li>Global search all slot contents to find a specific item
+			</li>
+			<li>Combine box slots to mimic your actual workflow for storing items
+			</li>
+			<li>Archive items to keep a log of those that are no longer active
+			</li>
+			<li>Move or copy items from one slot to another
+			</li>
+			<li>Add file attachments for each box as well as individual slot items
+			</li>
+		</ul>
+			
+		<div class="clearfooter"></div>
+		<div id="footer">Copyright &#169 2019 Christopher Mackay</div>
+	
+	</div>
+</body>
+</html>
