Added some files

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 <head>
 <title>CryoTracker</title>
 <link type="text/css" rel="stylesheet" href="style.css"/>
-<link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Ubuntu:300&display=swap" rel="stylesheet">
 </head>
 
 <body class="backcolor">
@@ -16,16 +16,17 @@
 		
 			<a class="main_nav" href="index.html">CryoTracker</a>
 			<a class="main_nav" href="contact.html">Contact</a>
+			<a class="main_nav" href="screenshots.html">Screenshots</a>
 			<a class="main_nav" href="install.html">Install</a>
 
 		</div>
 	
 		<h1>Contact</h1>
 		
-		<p class="medium">If you have a comment or question you can send it to the email address below. If you happen to cross paths with a nasty little software bug please report it to the email address below as well. <strong>Please take a screen shot of the error message and provide step by step instructions on how to reproduce the error</strong>.
+		<p class="small">If you have a comment or question you can send it to the email address below. If you happen to cross paths with a nasty little software bug please report it to the email address below as well. <strong>Please take a screen shot of the error message and provide step by step instructions on how to reproduce the error</strong>.
 		</p>
 		
-		<h1><a class="large" href="mailto:cryotracker.prog@gmail.com">cryotracker.prog@gmail.com</a></h1>
+		<h1><a class="medium" href="mailto:cryotracker.prog@gmail.com">cryotracker.prog@gmail.com</a></h1>
 
 		<div class="clearfooter"></div>
 		<div id="footer">Copyright &#169 2019 Christopher Mackay</div>
