--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 <title>CryoTracker</title>
 <link type="text/css" rel="stylesheet" href="style.css"/>
-<link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Ubuntu:300&display=swap" rel="stylesheet">   
 </head>
 
 <body class="backcolor">
@@ -16,6 +16,7 @@
 		
 			<a class="main_nav" href="index.html">CryoTracker</a>
 			<a class="main_nav" href="contact.html">Contact</a>
+			<a class="main_nav" href="screenshots.html">Screenshots</a>
 			<a class="main_nav" href="install.html">Install</a>
 
 		</div>
