--- a/changelog.html
+++ b/changelog.html
@@ -5,7 +5,7 @@
 <head>
 <title>CryoTracker</title>
 <link type="text/css" rel="stylesheet" href="style.css"/>
-<link href="https://fonts.googleapis.com/css?family=Lato:300" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Ubuntu:300&display=swap" rel="stylesheet">
 </head>
 
 <body class="backcolor">
@@ -15,9 +15,8 @@
 		<div class="container">
 		
 			<a class="main_nav" href="index.html">Checkbook</a>
-			<a class="main_nav" href="about.html">About</a>
 			<a class="main_nav" href="contact.html">Contact</a>	
-			<a class="main_nav" href="contribute.html">Contribute</a>
+			<a class="main_nav" href="screenshots.html">Screenshots</a>
 			<a class="main_nav" href="install.html">Install</a>
 			
 		</div>
