--- a/screenshots.html
+++ b/screenshots.html
@@ -21,8 +21,94 @@
 
 		</div>
 	
-		<h1>Under construction</h1>		
-			
+		<div class="center">
+			<figure>
+					<img src="screenshots/mainform.jpg" style="max-width:700px; max-height:700px;"/>
+					<figcaption class="small">
+						<p class="small">
+							Main window when CryoTracker is opened
+						</p>
+					</figcaption>
+			</figure>
+		</div>
+
+		<div class="center">
+			<figure>
+					<img src="screenshots/add_box.jpg" style="max-width:700px; max-height:700px;"/>
+				<figcaption>
+					<p class="small">
+						Creating a new box	
+					</p>
+				</figcaption>
+			</figure>
+		</div>
+
+		<div class="center">
+				<figure>
+						<img src="screenshots/general.jpg" style="max-width:700px; max-height:700px;"/>
+					<figcaption>
+						<p class="small">
+							General settings
+						</p>
+					</figcaption>
+				</figure>
+		</div>
+	
+		<div class="center">
+				<figure>
+						<img src="screenshots/colors.jpg" style="max-width:700px; max-height:700px;"/>
+					<figcaption>
+						<p class="small">
+							Color settings
+						</p>
+					</figcaption>
+				</figure>
+		</div>
+
+		<div class="center">
+				<figure>
+						<img src="screenshots/box.jpg" style="max-width:700px; max-height:700px;"/>
+					<figcaption>
+						<p class="small">
+							Opening a box
+						</p>
+					</figcaption>
+				</figure>
+		</div>
+
+		<div class="center">
+				<figure>
+						<img src="screenshots/slot.jpg" style="max-width:700px; max-height:700px;"/>
+					<figcaption>
+						<p class="small">
+							Opening a slot
+						</p>
+					</figcaption>
+				</figure>
+		</div>
+
+		<div class="center">
+				<figure>
+						<img src="screenshots/add_item.jpg" style="max-width:700px; max-height:700px;"/>
+					<figcaption>
+						<p class="small">
+							Creating a new slot item
+						</p>
+					</figcaption>
+				</figure>
+		</div>
+
+		<div class="center">
+				<figure>
+						<img src="screenshots/archive.jpg" style="max-width:700px; max-height:700px;"/>
+					<figcaption>
+						<p class="small">
+							Viewing archived items
+						</p>
+					</figcaption>
+				</figure>
+		</div>
+
 		<div class="clearfooter"></div>
 		<div id="footer">Copyright &#169 2019 Christopher Mackay</div>
 	
