Added some more files

--- a/changelog.html
+++ b/changelog.html
@@ -14,29 +14,23 @@
 		
 		<div class="container">
 		
-			<a class="main_nav" href="index.html">Checkbook</a>
-			<a class="main_nav" href="contact.html">Contact</a>	
+			<a class="main_nav" href="index.html">CryoTracker</a>
+			<a class="main_nav" href="contact.html">Contact</a>
 			<a class="main_nav" href="screenshots.html">Screenshots</a>
 			<a class="main_nav" href="install.html">Install</a>
-			
-		</div>
-	
-		<div class="sub_nav">
-		
-			<a class="sub_nav" href="http://www.gnu.org/licenses/gpl-3.0.txt">License</a>
-			<a class="sub_nav" href="checkbook_requirements.html">System Requirements</a>
-			<a class="sub_nav" href="checkbook_screenshots.html">Screenshots</a>
-			<a class="sub_nav" href="videos.html">Video Tutorials</a>
-			<a class="sub_nav" href="changelog.html">Changelog</a>
+			<a class="main_nav" href="requirements.html">System Requirements</a>
+			<a class="main_nav" href="changelog.html">Changelog</a>
 			
 		</div>
 
-		<h1>Changelog</h1>
+		<p class="medium">
+			Below is a complete log of all releases of CryoTracker
+		</p>
 	
-		<p class="large"><a class="large" href="all_installer_versions\Checkbook Setup-v1.0.exe" target="_blank">Version 1.0</a> - Initial Release - 4/20/2016</p>
+		<p class="large"><a class="large" href="releases/CryoTrackerSetup-v1.0.0.exe" target="_blank">Version 1.0</a> - Initial Release - XX/XX/2019</p>
 		
 		<div class="clearfooter"></div>
-		<div id="footer">Copyright &#169 2017 Chris Mackay</div>
+		<div id="footer">Copyright &#169 2019 Christopher Mackay</div>
 		
 	</div>
 
