--- a/install.html
+++ b/install.html
@@ -18,11 +18,35 @@
 			<a class="main_nav" href="contact.html">Contact</a>
 			<a class="main_nav" href="screenshots.html">Screenshots</a>
 			<a class="main_nav" href="install.html">Install</a>
+			<a class="main_nav" href="requirements.html">System Requirements</a>
+			<a class="main_nav" href="changelog.html">Changelog</a>
 
 		</div>
 	
-		<h1>Under construction </h1>
-	
+		<h1><a class="large" href="releases/latest_version/CryoTrackerSetup-v1.0.0.exe" target="_blank">Download Installer (v-1.0.0)</a></h1>
+
+        <hr width="100px">
+
+		<h1>Please review below before installing</h1>
+		
+		<hr width="100px">
+
+		<p class="medium">CryoTracker is not digitally signed. CryoTracker is intended to be a free application and digital certificates are quite expensive, too expensive for a free application. 
+		</p>
+		
+		<p>Below are some of the warnings you may be presented with while downloading and installing CryoTracker on your computer.
+		</p>
+
+		<ul>
+			<li>Your virus protection software could potentially flag it as a threat.
+			</li>
+			<li>Windows SmartScreen: This is a check to see if the application is signed with a digital certificate. If it does not have one it will let you know it is from an "Unknown Publisher". Click "More Info", then "Run Anyway" to proceed. (see below)
+			</li>
+			<li>User Account Control: This is another check which basically gives you one last warning that it is from an "Unknown Publisher". Click "Yes" to proceed.
+			</li>
+			<li>Web browsers may warn you that you may have downloaded a harmful file.
+			</li>
+		</ul>
 			
 		<div class="clearfooter"></div>
 		<div id="footer">Copyright &#169 2019 Christopher Mackay</div>
