--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 			<a class="main_nav" href="contact.html">Contact</a>
 			<a class="main_nav" href="screenshots.html">Screenshots</a>
 			<a class="main_nav" href="install.html">Install</a>
+			<a class="main_nav" href="requirements.html">System Requirements</a>
+			<a class="main_nav" href="changelog.html">Changelog</a>
 
 		</div>
 	
