--- a/screenshots.html
+++ b/screenshots.html
@@ -18,12 +18,14 @@
 			<a class="main_nav" href="contact.html">Contact</a>
 			<a class="main_nav" href="screenshots.html">Screenshots</a>
 			<a class="main_nav" href="install.html">Install</a>
+			<a class="main_nav" href="requirements.html">System Requirements</a>
+			<a class="main_nav" href="changelog.html">Changelog</a>
 
 		</div>
 	
 		<div class="center">
 			<figure>
-					<img src="screenshots/mainform.jpg" style="max-width:700px; max-height:700px;"/>
+					<img src="images/mainform.jpg" style="max-width:700px; max-height:700px;"/>
 					<figcaption class="small">
 						<p class="small">
 							Main window when CryoTracker is opened
@@ -34,7 +36,7 @@
 
 		<div class="center">
 			<figure>
-					<img src="screenshots/add_box.jpg" style="max-width:700px; max-height:700px;"/>
+					<img src="images/add_box.jpg" style="max-width:700px; max-height:700px;"/>
 				<figcaption>
 					<p class="small">
 						Creating a new box	
@@ -45,7 +47,7 @@
 
 		<div class="center">
 				<figure>
-						<img src="screenshots/general.jpg" style="max-width:700px; max-height:700px;"/>
+						<img src="images/general.jpg" style="max-width:700px; max-height:700px;"/>
 					<figcaption>
 						<p class="small">
 							General settings
@@ -56,7 +58,7 @@
 	
 		<div class="center">
 				<figure>
-						<img src="screenshots/colors.jpg" style="max-width:700px; max-height:700px;"/>
+						<img src="images/colors.jpg" style="max-width:700px; max-height:700px;"/>
 					<figcaption>
 						<p class="small">
 							Color settings
@@ -67,7 +69,7 @@
 
 		<div class="center">
 				<figure>
-						<img src="screenshots/box.jpg" style="max-width:700px; max-height:700px;"/>
+						<img src="images/box.jpg" style="max-width:700px; max-height:700px;"/>
 					<figcaption>
 						<p class="small">
 							Opening a box
@@ -78,7 +80,7 @@
 
 		<div class="center">
 				<figure>
-						<img src="screenshots/slot.jpg" style="max-width:700px; max-height:700px;"/>
+						<img src="images/slot.jpg" style="max-width:700px; max-height:700px;"/>
 					<figcaption>
 						<p class="small">
 							Opening a slot
@@ -89,7 +91,7 @@
 
 		<div class="center">
 				<figure>
-						<img src="screenshots/add_item.jpg" style="max-width:700px; max-height:700px;"/>
+						<img src="images/add_item.jpg" style="max-width:700px; max-height:700px;"/>
 					<figcaption>
 						<p class="small">
 							Creating a new slot item
@@ -100,7 +102,7 @@
 
 		<div class="center">
 				<figure>
-						<img src="screenshots/archive.jpg" style="max-width:700px; max-height:700px;"/>
+						<img src="images/archive.jpg" style="max-width:700px; max-height:700px;"/>
 					<figcaption>
 						<p class="small">
 							Viewing archived items
