--- a/install.html
+++ b/install.html
@@ -31,22 +31,24 @@
 		
 		<hr width="100px">
 
-		<p class="medium">CryoTracker is not digitally signed. CryoTracker is intended to be a free application and digital certificates are quite expensive, too expensive for a free application. 
+		<p class="medium">CryoTracker is not digitally signed. CryoTracker is intended to be a free application and digital certificates are expensive; too expensive for a free application. 
 		</p>
 		
 		<p>Below are some of the warnings you may be presented with while downloading and installing CryoTracker on your computer.
 		</p>
 
 		<ul>
+			<li>Web browsers may warn you that you may have downloaded a harmful file.
+			</li>
 			<li>Your virus protection software could potentially flag it as a threat.
 			</li>
-			<li>Windows SmartScreen: This is a check to see if the application is signed with a digital certificate. If it does not have one it will let you know it is from an "Unknown Publisher". Click "More Info", then "Run Anyway" to proceed. (see below)
+			<li>Windows SmartScreen: This is a check to see if the application is signed with a digital certificate. If it does not have one it will let you know it is from an "Unknown Publisher". Click "More Info", then "Run Anyway" to proceed.
 			</li>
 			<li>User Account Control: This is another check which basically gives you one last warning that it is from an "Unknown Publisher". Click "Yes" to proceed.
 			</li>
-			<li>Web browsers may warn you that you may have downloaded a harmful file.
-			</li>
 		</ul>
+
+		<p>If you have any questions feel free to ask at <a class="medium" href="mailto:cryotracker.prog@gmail.com">cryotracker.prog@gmail.com</a></p>
 			
 		<div class="clearfooter"></div>
 		<div id="footer">Copyright &#169 2019 Christopher Mackay</div>
