--- a/requirements.html
+++ b/requirements.html
@@ -23,7 +23,7 @@
 
 		</div>
 	
-		<h1>Checkbook runs on Windows 7, 8, & 10</h1>
+		<h1>CryoTracker runs on Windows 7, 8, & 10</h1>
 		
 		<a class="medium" href="http://www.microsoft.com/en-us/download/details.aspx?id=30653">Microsoft .NET Framework 4.5</a>
 		
@@ -35,7 +35,7 @@
 			
 		<a class="medium" href="AccessRuntime.exe">Microsoft Access Runtime 2007</a>
 			
-		<p>CryoTracker stores your ledger data in Microsoft Access databases. Click <a class="inline" href="AccessRuntime.exe">here</a> to download the installer.</p>
+		<p>CryoTracker stores your slot items in Microsoft Access databases. Click <a class="inline" href="AccessRuntime.exe">here</a> to download the installer.</p>
 			
 		<hr style="margin-top: 30px; margin-bottom: 30px;" width="50%">
 			
