--- a/install.html
+++ b/install.html
@@ -23,7 +23,7 @@
 
 		</div>
 	
-		<h1><a class="large" href="releases/CryoTrackerSetup-v1.0.0.exe" target="_blank">Download Installer (v-1.0.0)</a></h1>
+		<h1><a class="large" href="releases/CryoTracker-v1.0.0 Setup.exe" target="_blank">Download Installer (v-1.0.0)</a></h1>
 
         <hr width="100px">
 
