--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 	
 		<h1>Contact</h1>
 		
-		<p class="small">If you have a comment or question you can send it to the email address below. If you happen to cross paths with a nasty little software bug please report it to the email address below as well. <strong>Please take a screen shot of the error message and provide step by step instructions on how to reproduce the error</strong>.
+		<p class="small">If you have a comment or question you can send it to the email address below
 		</p>
 		
 		<h1><a class="medium" href="mailto:cryotracker.prog@gmail.com">cryotracker.prog@gmail.com</a></h1>
