--- a/changelog.html
+++ b/changelog.html
@@ -27,6 +27,12 @@
 			Below is a complete log of all releases of CryoTracker
 		</p>
 	
+		<p class="large"><a class="large" href="releases/CryoTracker-v1.0.1 Setup.exe" target="_blank">Version 1.0.1</a> - 08/20/2019</p>
+		<ul>
+			<li>Fixed bug where search in the Main window would not find anything</li>
+			<li>Split up the Edit menu item into Location and Box</li>
+		</ul>
+
 		<p class="large"><a class="large" href="releases/CryoTracker-v1.0.0 Setup.exe" target="_blank">Version 1.0.0</a> - Initial Release - 07/10/2019</p>
 		
 		<div class="clearfooter"></div>
