Minor formatting. Removed the border around the copyright footer.

--- a/install.html
+++ b/install.html
@@ -31,7 +31,8 @@
 		
 		<hr width="100px">
 
-		<p class="medium">CryoTracker is not digitally signed. CryoTracker is intended to be a free application and digital certificates are expensive; too expensive for a free application. 
+		<p class="medium">CryoTracker is not digitally signed. CryoTracker is intended to be a free application and digital certificates are too expensive for a free application.
+			This means that Windows and web browsers will warn you that it may be harmful.
 		</p>
 		
 		<p>Below are some of the warnings you may be presented with while downloading and installing CryoTracker on your computer.
